@@ -5,7 +5,7 @@
     <groupId>org.eclipse.gemini.blueprint</groupId>
     <artifactId>gemini-blueprint</artifactId>
     <!-- Note: When updating the version, ensure it is a valid OSGi version -->
-    <version>4.0.0.BUILD-SNAPSHOT</version>
+    <version>6.0.0.BUILD-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Gemini Blueprint</name>
     <url>http://www.eclipse.org/gemini/blueprint/</url>
@@ -23,7 +23,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Spring version -->
-        <spring.maven.artifact.version>6.1.2_1</spring.maven.artifact.version>
+        <spring.maven.artifact.version>6.0.18_1</spring.maven.artifact.version>
         <spring.base.version>6.0.0</spring.base.version>
 
         <symName.prefix>org.eclipse.gemini.blueprint</symName.prefix>
@@ -55,10 +55,6 @@
         <clover.skip>false</clover.skip>
 
         <findbugs.skip>false</findbugs.skip>
-
-        <!-- security options for integration testing -->
-        <security.argLine />
-        <policy.url>..${file.separator}policy.all</policy.url>
 
         <!-- common version ranges -->
         <spring.version.range.nq>[${spring.base.version},7)</spring.version.range.nq>
@@ -313,9 +309,9 @@
     <!-- shared dependencies across modules -->
     <dependencies>
         <dependency>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-            <version>1</version>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
+            <version>2.0.1</version>
         </dependency>
 
         <!-- junit -->
@@ -414,7 +410,7 @@
                 <plugin>
                     <groupId>biz.aQute.bnd</groupId>
                     <artifactId>bnd-maven-plugin</artifactId>
-                    <version>3.3.0</version>
+                    <version>6.0.0</version>
                     <executions>
                         <execution>
                             <goals>
@@ -554,8 +550,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -854,14 +850,6 @@
             <modules>
                 <module>integration-tests</module>
             </modules>
-        </profile>
-
-        <!-- Java 2 security enabled profile -->
-        <profile>
-            <id>security</id>
-            <properties>
-                <security.argLine>-Djava.security.manager -Djava.security.policy=${policy.url}</security.argLine>
-            </properties>
         </profile>
 
         <!-- clover profile -->
